# med-vllm

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT.md  README.md  TESTING.md  bench.py  check_package_structure.py  example.py  minimal_test.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  registry_fix.py  requirements-medical.txt  requirements-test.txt  ruff.toml  run_tests.sh  setup.py  test_adapter_standalone.py  test_env.py  test_import.py  test_imports.py  test_llm_engine_import.py  test_modular_adapters.py  test_patched_import.py  test_pytest_imports.py  test_python_path.py  test_subprocess.py  test_transformers_import.py  test_transformers_import_script.py
.taskmaster/: state.json
benchmark_results_cpu_smoke/: biobert_adapter_benchmark_20250823_094452.json  biobert_adapter_benchmark_20250823_095012.json  biobert_benchmark_1755219628.json  biobert_benchmark_1755483151.json  biobert_benchmark_1755483351.json  biobert_benchmark_1755483606.json  biobert_benchmark_1755484040.json  biobert_benchmark_1755884168.json  biobert_benchmark_1755884530.json  biobert_benchmark_1755885392.json  biobert_classification_metrics_1755483151.json  biobert_classification_metrics_1755483351.json  biobert_classification_metrics_1755483606.json  biobert_classification_metrics_1755484040.json  biobert_classification_metrics_1755885392.json  clinicalbert_adapter_benchmark_20250823_094512.json  clinicalbert_adapter_benchmark_20250823_095103.json  clinicalbert_benchmark_1755219887.json  clinicalbert_benchmark_1755884192.json  ner_benchmark_results.json  textgen_ab_results.json
benchmarks/: README.md  __init__.py  benchmark_attention.py  benchmark_bias_gelu.py  benchmark_hardware_matrix.py  benchmark_imaging.py  benchmark_linking.py  benchmark_medical.py  benchmark_medical_adapters.py  benchmark_ner.py  benchmark_quantization_accuracy.py  benchmark_separable_conv3d.py  benchmark_timeseries.py  benchmark_training.py  benchmark_utils.py  compare_with_original.py  generate_report.py  imaging_datasets.py  run_benchmarks.py  sweep_sep3d_autotune.py
config/: .pre-commit-config.yaml  mypy.ini  pytest.ini
docs/: ADAPTER_ARCHITECTURE.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_PROFILES.md  GPU.md  IMAGING_DATASETS.md  OPTIMIZATION.md  QUANTIZATION.md  TESTING.md  TESTING_E2E.md  TIMESERIES.md  TRAINER.md  UAT.md  VALIDATION_WORKFLOW.md  VERSIONS.md  benchmarks.md  classification_tests.md  deployment_profile.schema.json  expert_eval_protocol.md  expert_eval_template.csv  index.md  medical_models.md  model_registry.md  ner_processor.md  text_generator.md  type_checking.md
examples/: adapter_example.py  imaging_dataset_example.py  ner_highlight.html  ner_processor_example.py  text_generator_example.py  timeseries_dataset_example.py  trainer_usage_example.py  training_toy_example.py
medvllm/: __init__.py  config.py  llm.py  sampling_params.py
profiles/: trace_1756453365.json  trace_1756453608.json  trace_1756457972.json  trace_1756457988.json
reports/: benchmark_imaging3d_2025-08-30.json  benchmark_imaging3d_depthwise_2025-08-30.json  benchmark_report.md  benchmark_sep3d_2025-08-30.json  benchmark_summary_cpu_2025-08-23.md  benchmark_summary_cpu_test.md  quant_acc_report.json  quant_acc_sst2_report.json  (+5 more)
(+438 files in other folders)
