[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "med-vllm"
version = "0.1.0"
authors = [{ name = "Kresna Sucandra" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a Nano vLLM fine-tuned for medical applications"
requires-python = ">=3.10,<3.13"
dependencies = [
    "xxhash>=3.4.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    # CLI runtime deps
    "click>=8.1.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
all = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn>=2.5.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "pylint>=3.1.0",
    "mypy>=1.11.1",
    "bandit>=1.7.7",
    "safety>=2.3.5",
    "pre-commit>=3.0.0",
    "types-requests",
    "types-pyyaml",
    "types-python-dateutil",
]

# Optional extras for distributed training
distributed = [
    "deepspeed",
]

[project.urls]
Homepage="https://github.com/SHA888/med-vllm"


[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.bandit]
# Bandit configuration
# Skip these tests (comma-separated list of test IDs)
skips = ["B101", "B104"]

# Only run specific tests (comma-separated list of test IDs)
# tests = ""

# Skip these directories (comma-separated list of paths)
exclude_dirs = [
    "tests",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info"
]

# Output format (txt, csv, json, custom, screen)
output_format = "screen"

# Output file (if format is not screen)
# output_file = "bandit_results.txt"

# Verbosity level (1-3)
verbose = 1

# Number of processes to use for running tests
# processes = 1

# Show line numbers in output
show_code = true

# Show skipped tests in output
show_skipped = false
